--- a/index.html
+++ b/index.html
@@ -11,9 +11,9 @@
     <nav>
         <ul>
             <li><a href="index.php">Présentation</a></li>
-            <li><a href="projet1.php">Projet 1</a></li>
-            <li><a href="projet2.php">Projet 2</a></li>
-            <li><a href="projet3.php">Projet 3</a></li>
+            <li><a href="projet1.html">Projet 1</a></li>
+            <li><a href="projet2.html">Projet 2</a></li>
+            <li><a href="projet3.html">Projet 3</a></li>
         </ul>
     </nav>
 </header>
@@ -51,7 +51,6 @@
     </p>
 
     <h2>CV</h2>
-    <embed class="liseuse" src="./PRUDHOMME-CV-Q1(v2).pdf" type="application/pdf">
     <iframe class="liseuse" src="./PRUDHOMME-CV-Q1(v2).pdf"></iframe>
 
 </section>
