--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <header>
     <nav>
         <ul>
-            <li><a href="index.php">Présentation</a></li>
+            <li><a href="index.html">Présentation</a></li>
             <li><a href="projet1.html">Projet 1</a></li>
             <li><a href="projet2.html">Projet 2</a></li>
             <li><a href="projet3.html">Projet 3</a></li>
