ajout projets 2 et 3

--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Portfolio - TON NOM</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -11,46 +12,44 @@
     <nav>
         <ul>
             <li><a href="index.html">Présentation</a></li>
-            <li><a href="projet1.html">Projet 1</a></li>
-            <li><a href="projet2.html">Projet 2</a></li>
-            <li><a href="projet3.html">Projet 3</a></li>
+            <li><a href="projet1.html">Jeu de cartes Pokémon</a></li>
+            <li><a href="projet2.html">Site de vote</a></li>
+            <li><a href="projet3.html">Jeu du 421</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 
 <main>
 
-<section class="presentation">
+<section>
 
-    <h1>À propos de moi</h1>
+    <h1>Timothé Prud'homme Gateau</h1>
 
     <p>
-        <!-- Présente ton parcours : ton nom, ton âge, ton BUT Informatique,
-             les raisons pour lesquelles tu t’intéresses à l’informatique,
-             les domaines qui te passionnent (développement web, réseau, IA…)
-             et ce que tu aimerais faire plus tard. -->
         Mon père et mon grand frère sont tous les deux informaticiens, j’ai donc baigné dans l’informatique depuis petit.
-        Dès le lycée j’ai suivi la spécialité numérique et sciences de l’informatique et j’ai tout de suite su que j’aimais particulièrement apprendre comment résoudre des problèmes avec des algorithmes et apprendre comment les modéliser.
+    </p>
+    <p>
+        Dès le lycée j’ai suivi la spécialité numérique et sciences de l’informatique et j’ai tout de suite su que j’aimais particulièrement
+        apprendre comment résoudre des problèmes avec des algorithmes et apprendre comment les modéliser.
+    </p>
+    <p>
         J’hésitais entre une Licence et un BUT informatique, mais l’aspect de mise en pratique qu’offre le BUT me paraissait plus attractif.
+    </p>
+    <p>
         J’ai choisi de poursuivre mes études à l’IUT informatique de Montpellier-Sète pour pouvoir mettre en pratique directement les connaissances apprises.
+    </p>
+    <p>
         Au cours du BUT je me suis rendu compte que je préférais réaliser des applications, qu’il s’agisse de jeu ou d’applications utilitaires.
     </p>
 
-    <h2>Compétences principales</h2>
-    <ul>
-        <li><!-- Compétence 1 : langage ou technologie maîtrisée --></li>
-        <li><!-- Compétence 2 : exemple (PHP, Java, SQL, HTML/CSS…) --></li>
-        <li><!-- Compétence 3 : framework ou outil (Symfony, Git, Linux…) --></li>
-    </ul>
-
     <h2>Objectifs professionnels</h2>
     <p>
-        <!-- Décris tes ambitions : stage, alternance, poursuite d’étude,
-             métiers visés (développeur web, dev full stack, admin réseau…). -->
         Je ne sais pas encore si je préférerai poursuivre mes études en école d’ingénieur ou bien intégrer directement le monde professionnel après mon BUT.
+        Mais je pense que le stage que je vais réaliser en avril 2026 me permettra d'éclairer mon choix.
     </p>
 
-    <h2>CV</h2>
+    <h2>Curriculum Vitae</h2>
     <iframe class="liseuse" src="./PRUDHOMME-CV-Q1(v2).pdf"></iframe>
 
 </section>
@@ -58,7 +57,7 @@
 </main>
 
 <footer>
-    <p>© 2025 - Timothé Prud'homme Gateau – Portfolio BUT Informatique</p>
+    <p>2025 - Timothé Prud'homme Gateau – Portfolio</p>
 </footer>
 
 </body>
