--- a/projet1.html
+++ b/projet1.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <title>Portfolio - TON NOM</title>
     <link rel="stylesheet" href="style.css">
+    <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@400;600&display=swap" rel="stylesheet">
 </head>
 <body>
 
@@ -11,50 +12,79 @@
     <nav>
         <ul>
             <li><a href="index.html">Présentation</a></li>
-            <li><a href="projet1.html">Projet 1</a></li>
-            <li><a href="projet2.html">Projet 2</a></li>
-            <li><a href="projet3.html">Projet 3</a></li>
+            <li><a href="projet1.html">Jeu de cartes Pokémon</a></li>
+            <li><a href="projet2.html">Site de vote</a></li>
+            <li><a href="projet3.html">Jeu du 421</a></li>
+            <li><a href="contact.html">Contact</a></li>
         </ul>
     </nav>
 </header>
 
 <main>
 
-<section class="projet">
+<section>
 
-    <h1>Projet 1 – Titre du projet</h1>
+    <h1>Jeu de cartes Pokémon</h1>
 
     <h2>Description du projet</h2>
     <p>
-        <!-- Explique en quelques phrases ce qu’était le projet :
-             contexte (SAE, projet tutoré…), objectifs, compétences visées. -->
+        Dans le cadre d’un projet de deux mois, pendant ma première année de BUT Informatique, un camarade de classe et moi avons réalisé un jeu de cartes
+        Pokémon numérique, en reproduisant les mécaniques du jeu officiel.
     </p>
 
-    <h2>Technologies utilisées</h2>
-    <ul>
-        <li><!-- Exemple : PHP --></li>
-        <li><!-- Exemple : MySQL --></li>
-        <li><!-- Exemple : HTML/CSS --></li>
-        <li><!-- Autres outils : Git, Docker... --></li>
-    </ul>
-
-    <h2>Ce que j’ai réalisé</h2>
+    <h2>Développement du code métier (Java)</h2>
     <p>
-        <!-- Décris ton rôle : fonctionnalités développées, difficultés rencontrées,
-             ce que tu as appris, ce que tu referais différemment. -->
+        Durant la première phase du projet (1 mois), nous avons conçu et programmé l’ensemble des règles du jeu en Java.
+    </p>
+    <p>
+        Je me suis particulièrement concentré sur l’implémentation des attaques des différents Pokémons, la gestion des dégâts et des états spéciaux.
+        La programmation des cartes Objets et Dresseurs, incluant leurs actions spéciales et leurs interactions avec les Pokémons.
+        La structuration des classes pour modéliser les cartes et leurs comportements.
+    </p>
+    <p>
+        J’ai également mis en place un ensemble de tests unitaires permettant de vérifier la cohérence entre le code et les règles de jeu et de détecter,
+        puis corriger les erreurs.
+    </p>
+    <p>
+        Cette étape m’a aidé à approfondir ma maîtrise du Java orienté objet, comprendre l’importance des tests unitaires pour garantir la fiabilité d’une application.
     </p>
 
-    <h2>Captures d’écran / Démonstration</h2>
+    <h2>Développement de l’interface graphique (JavaFX)</h2>
     <p>
-        <!-- Ici tu peux ajouter des images plus tard : interface, diagrammes, etc. -->
+        Pendant la seconde phase (1 mois), nous avons développé l’interface graphique en JavaFX.
+        Nous avons modéliser l’affichage des cartes avec leurs caractéristiques les interactions utilisateur (jouer une carte, sélectionner une attaque,
+        gérer les actions du tour…) et la gestion des événements et transitions entre les différentes phases du jeu.
     </p>
+    <p>
+        Cette étape m’a permis de mieux comprendre la création d’interfaces JavaFX, le binding, la gestion d’événements mais aussi l’ergonomie d’une
+        application de jeu et le fonctionnement des interactions utilisateur.
+    </p>
+    <p>
+        Cette étape m’a permis de mieux comprendre la création d’interfaces JavaFX, le binding, la gestion d’événements mais aussi l’ergonomie d’une
+        application de jeu et le fonctionnement des interactions utilisateur.
+    </p>
+
+    <h2>Travail collaboratif et versioning (GitLab)</h2>
+    <p>
+        Nous avons utilisé GitLab dès le début afin de travailler en parallèle sur différentes fonctionnalités du jeu via les branches.
+    </p>
+    <p>
+        En ce qui concerne Git, j’ai pu apprendre à gérer les fusions de branches, résoudre des conflits et organiser le dépôt.
+        Cela nous a aussi habitué à mettre en place des commits clairs et réguliers facilitant le suivi de l’évolution du projet (l’ajout de fonctionnalités,
+        la factorisation du code, les modifications…).
+    </p>
+    <p>
+        J’ai aussi appris à planifier un projet et travailler en équipe, puisqu’il s’agissait de mon premier projet de développement réalisé en équipe.
+    </p>
+
+    <img class="pokemon" src="./Recording%202025-11-26%20at%2022.01.57.gif" alt="gif_projet_pokemon">
 
 </section>
 
 </main>
 
 <footer>
-    <p>© 2025 - Timothé Prud'homme Gateau – Portfolio BUT Informatique</p>
+    <p>2025 - Timothé Prud'homme Gateau – Portfolio</p>
 </footer>
 
 </body>
